# glamorous

./: .gitignore  LICENSE  RAEDME.md  README.md
data/: StyleProcess.py
lab/AdaIN-style/: CMakeLists.txt  main.cpp  readme  runlua.cpp  style_trans.cc  style_trans.h  testFromCpp.lua
lab/Ashikhmin/: CMakeLists.txt  etf.cc  etf.h  main.cpp  texture_tranfer.cc  texture_transfer.cc  texture_transfer.h
lab/color/: CMakeLists.txt  color_difference.cc  color_difference.h  color_difference_hsv.cc  color_difference_lab.cc  color_difference_lab.h  color_difference_rgb.cc  color_difference_rgb.h  color_transfer.cc  color_transfer.h  color_transfer_hsv.cc  color_transfer_hsv.h  color_transfer_rgb.cc  color_transfer_rgb.h  main.cpp
lab/etf/: .tags1  CMakeLists.txt  etf.cc  main.cpp
lab/ink/libdisp/: CMakeLists.txt  ink_dispersion.cc  libinkdisp.cpp  libinkdisp.exports  libinkdisp.h  main.cpp  readme.txt
lab/simple_color_feature/: CMakeLists.txt  simple_color_feature_extractor.cc  simple_color_feature_extractor.h  test.cpp
lab/zljcolor/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  test  test.cc  test.h
lab/zljcolor/database/colorReplaceTest/: Claude_Monet_Paintings_-_1525_paintings_Dolceacqua,_Castle,_1884_cp.txt  Claude_Monet_Paintings_-_1525_paintings_Dr._Leclenche,_1864_cp.txt  Claude_Monet_Paintings_-_1525_paintings_Edge_of_the_Cliff,_Pourville,_1882_cp.txt  Claude_Monet_Paintings_-_1525_paintings_Field_at_Gennevilliers,_1877_cp.txt  Claude_Monet_Paintings_-_1525_paintings_Marine_near_Etretat_cp.txt  Claude_Monet_Paintings_-_1525_paintings_Meadow_at_Giverny,_1888_cp.txt  Claude_Monet_Paintings_-_1525_paintings_Morning_on_the_Seine,_1897_cp.txt  Claude_Monet_Paintings_-_1525_paintings_Path_at_Pourville_02,_1882_cp.txt  Claude_Monet_Paintings_-_1525_paintings_Pleasure_Boats,_1872_cp.txt  Claude_Monet_Paintings_-_1525_paintings_Study_of_Rocks,_1889_cp.txt  Claude_Monet_Paintings_-_1525_paintings_The_Banks_of_the_River_Epte_in_Springtime,_1885_cp.txt  Claude_Monet_Paintings_-_1525_paintings_The_Banks_of_the_Seine,_Ile_de_la_Grande-Jatte,_1878_cp.txt  Claude_Monet_Paintings_-_1525_paintings_The_Beach_at_Honfleur,_1865_cp.txt  Claude_Monet_Paintings_-_1525_paintings_The_Blue_House_at_Zaandam,_1871_cp.txt  Claude_Monet_Paintings_-_1525_paintings_The_Blue_Row_Boat,_1887_cp.txt  Claude_Monet_Paintings_-_1525_paintings_The_Entrance_to_Giverny_under_the_Snow,_1885_cp.txt  Claude_Monet_Paintings_-_1525_paintings_The_Esterel_Mountains,_1888_cp.txt  Claude_Monet_Paintings_-_1525_paintings_The_Frost,_1885_cp.txt  Claude_Monet_Paintings_-_1525_paintings_The_Galettes,_1882_cp.txt  Claude_Monet_Paintings_-_1525_paintings_The_Isle_Grande-Jatte,_1878_cp.txt  Claude_Monet_Paintings_-_1525_paintings_The_Islets_at_Port-Villez,_1897_cp.txt  Claude_Monet_Paintings_-_1525_paintings_The_Tow_Path_at_Granval,_1883_cp.txt  Claude_Monet_Paintings_-_1525_paintings_The_Tow_Path_at_Granval_(detail),_1883_cp.txt  Claude_Monet_Paintings_-_1525_paintings_The_Willows,_1880_cp.txt  Claude_Monet_Paintings_-_1525_paintings_Vetheuil,_1901_03_cp.txt  Claude_Monet_Paintings_-_1525_paintings_Water_Lilies,_1920-26_03_cp.txt  Claude_Monet_Paintings_-_1525_paintings_Water_Lilies,_1922_cp.txt  Claude_Monet_Paintings_-_1525_paintings_Water_Lily_Pond,_1918-19_01_cp.txt  Claude_Monet_Paintings_-_1525_paintings_White_Frost,_1875_cp.txt  Claude_Monet_Paintings_-_1525_paintings_Wisteria,_1919-1920_04_cp.txt  Claude_Monet_Paintings_-_1525_paintings_Woman_with_a_Parasol,_Facing_Right_(also_known_as_Study_of_a_Figure_Outdoors_(Facing_Right)),_1886_cp.txt
project/: .ycm_extra_conf.py  CMakeLists.txt
project/app/: CMakeLists.txt  app.cc  app.h  app.i  app.py  app_wrap.cxx  server.cpp  test.cpp  test.py
project/pipeline/: CMakeLists.txt  README.md
project/pipeline/include/: image_database.h  log.h  pipeline.h  threadsafe_queue.h
project/pipeline/include/component/: component.h  component_factory.h
project/pipeline/include/struct/: image_attr.h  request_status.h  warning.md
project/pipeline/non-cpp/: CMakeLists.txt
project/pipeline/non-cpp/lua/gan/: README.md
project/pipeline/non-cpp/lua/style_transfer/: README.md
project/pipeline/non-cpp/matlab/: CMakeLists.txt  README.md
project/pipeline/non-cpp/matlab/ink/: CMakeLists.txt  libinkdisp.h
project/pipeline/non-cpp/python/: README.md
project/pipeline/non-cpp/python/photo2sketch/: main  main.cpp  photo2sketch.cc  photo2sketch.h  photo2sketch.pyx
project/pipeline/non-cpp/python/txt2image/: text2image.pyx
project/pipeline/src/: CMakeLists.txt  image_database.cc  log.cc  pipeline.cc
project/pipeline/src/component/: README  component.cc
project/pipeline/src/component/adj_5color_component/: README.md  adj_5color_component.cc  adj_5color_component.h
project/pipeline/src/component/color_attribute_extractor_component/: color_attribute_extractor_component.cc  color_attribute_extractor_component.h
project/pipeline/src/component/color_transfer_component/: color_transfer.cc  color_transfer.h  color_transfer_component.cc  color_transfer_component.h
project/pipeline/src/component/database_match_component/: database_match_component.cc  database_match_component.h
project/pipeline/src/component/idle_component/: idle_component.cc  idle_component.h
project/pipeline/src/component/ink_transfer_component/: README.md  ink_dispersion.cc  ink_dispersion.h  ink_transfer_component.cc  ink_transfer_component.h
project/pipeline/src/component/ink_video_component/: ink_video.cc  ink_video_component.cc  ink_video_component.h
project/pipeline/src/component/mean_contrast_transfer_component/: mean_contrast_transfer_component.cc  mean_contrast_transfer_component.h
project/pipeline/src/component/oilpaint_transfer_component/: README.md  oilpaint_transfer.cc  oilpaint_transfer.h  oilpaint_transfer_component.cc  oilpaint_transfer_component.h
project/pipeline/src/component/photo2sketch_component/: README.md  photo2sketch.c  photo2sketch.h  photo2sketch.pyx  photo2sketch_component.cc  photo2sketch_component.h  saliency.py  saliency_mbd.py
(+1677 files in other folders)
