cmake_minimum_required(VERSION 2.8)
project(etf)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -Wall")
set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
# set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
set(OpenCV_STATIC ON)
find_package(OpenCV REQUIRED)
file(GLOB source_list "*.cc" "*.cpp")
add_executable(main ${source_list})
target_link_libraries(main ${OpenCV_LIBS})
