cmake_minimum_required(VERSION 2.8)
project( main )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -Wall")
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} /usr/local/MATLAB/R2017a/extern/include )
link_directories( /usr/local/MATLAB/R2017a/runtime/glnxa64 )
link_directories( /usr/local/MATLAB/R2017a/bin/glnxa64 )
link_directories( ../ )
add_executable( main main.cpp ink_dispersion.cc log.cc )
target_link_libraries( main ${OpenCV_LIBS} mwmclmcrrt inkdisp )
